--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-import Layout from "../layout/layout.astro"
+import CardBlog from "@/Components/cardBlog.astro"
+import Layout from "@/layout/layout.astro"
 ---
 
 <Layout title="Home | Cafe Estela">
@@ -10,4 +11,7 @@ import Layout from "../layout/layout.astro"
 	
 	</h2>
 	<p>hola que tal a todos soy un parrafo</p>
+
+	<br>
+	<CardBlog heading="Esto es una receta" link="#"/>
 </Layout>
